--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
+    "daisyui": "^4.12.22",
     "eslint": "^8",
     "eslint-config-next": "15.0.3",
     "microcms-js-sdk": "^3.1.2",
