--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -13,6 +13,8 @@ permissions:
 jobs:
   build:
     runs-on: ubuntu-latest
+    env:
+      MICROCMS_API_KEY: ${{ secrets.MICROCMS_API_KEY }}
     steps:
       - name: Checkout
         uses: actions/checkout@v4
@@ -25,6 +27,9 @@ jobs:
 
       - name: Install dependencies
         run: npm install --legacy-peer-deps
+
+      - name: Create .env.local file
+        run: echo "MICROCMS_API_KEY=$MICROCMS_API_KEY" >> .env.local
 
       - name: Build
         run: npm run build
