--- a/package.json
+++ b/package.json
@@ -18,10 +18,12 @@
     "clsx": "^2.1.1",
     "d3": "^7.9.0",
     "embla-carousel-react": "^8.5.2",
+    "glob": "^11.0.1",
     "lucide-react": "^0.471.1",
-    "next": "15.0.3",
-    "react": "19.0.0-rc-66855b96-20241106",
-    "react-dom": "19.0.0-rc-66855b96-20241106",
+    "next": "^15.1.5",
+    "react": "18.2.0",
+    "react-dom": "18.2.0",
+    "rimraf": "^6.0.1",
     "tailwind-merge": "^2.6.0",
     "tailwindcss-animate": "^1.0.7"
   },
@@ -30,7 +32,7 @@
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
-    "eslint": "^8",
+    "eslint": "^9.18.0",
     "eslint-config-next": "15.0.3",
     "eslint-config-prettier": "^10.0.1",
     "husky": "^9.1.7",
