--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -17,6 +17,7 @@ jobs:
     runs-on: ubuntu-latest
     env:
       MICROCMS_API_KEY: ${{ secrets.MICROCMS_API_KEY }}
+      NEXT_PUBLIC_GTM_ID: ${{ secrets.NEXT_PUBLIC_GTM_ID }}
     steps:
       - name: Checkout
         uses: actions/checkout@v4
@@ -31,7 +32,9 @@ jobs:
         run: npm ci
 
       - name: Create .env.local file
-        run: echo "MICROCMS_API_KEY=$MICROCMS_API_KEY" >> .env.local
+        run: |
+          echo "MICROCMS_API_KEY=$MICROCMS_API_KEY" >> .env.local
+          echo "NEXT_PUBLIC_GTM_ID=$NEXT_PUBLIC_GTM_ID" >> .env.local
 
       - name: Build
         run: npm run build
