--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -18,6 +18,7 @@ jobs:
     env:
       MICROCMS_API_KEY: ${{ secrets.MICROCMS_API_KEY }}
       NEXT_PUBLIC_GTM_ID: ${{ secrets.NEXT_PUBLIC_GTM_ID }}
+      NEXT_PUBLIC_DOMAIN_NAME: 'laughcraft.dev'
     steps:
       - name: Checkout
         uses: actions/checkout@v4
@@ -35,12 +36,13 @@ jobs:
         run: |
           echo "MICROCMS_API_KEY=$MICROCMS_API_KEY" >> .env.local
           echo "NEXT_PUBLIC_GTM_ID=$NEXT_PUBLIC_GTM_ID" >> .env.local
+          echo "NEXT_PUBLIC_DOMAIN_NAME=$NEXT_PUBLIC_DOMAIN_NAME" >> .env.local
 
       - name: Build
         run: npm run build
 
       - name: Create CNAME file
-        run: echo "laughcraft.dev" > ./out/CNAME
+        run: echo "$NEXT_PUBLIC_DOMAIN_NAME" > ./out/CNAME
 
       - name: Configure Pages
         uses: actions/configure-pages@v4
