--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "glob": "^11.0.1",
     "lucide-react": "^0.471.1",
     "next": "^15.1.5",
+    "posthog-js": "^1.209.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "rimraf": "^6.0.1",
